...
    MissionStatus.pendingProvider,
    MissionStatus.confirmed,
  ], 'Aucune mission à venir'),
  inProgress('En cours', <MissionStatus>[
    MissionStatus.inProgress,
  ], 'Aucune mission en cours'),
  completed('Terminées', <MissionStatus>[
    MissionStatus.completed,
    MissionStatus.closed,
  ], 'Aucune mission terminée'),
  cancelled('Annulées', <MissionStatus>[
    MissionStatus.cancelled,
  ], 'Aucune mission annulée');
...
